	  applications with specific file extentions. For instances, (".gif" can
	  optionally be opened up with gimp or paintshop, or "css" with w/topstyle).
    - added menu item to JTree for launching the ext. apps ("Open with (xxx)")
    - added new configuration layout pane for external applications
  [stefan kost]
    - fixed NPE in TabNumber to Model resolving code
	- switching buffers in jEdit now activates them in the trees too.

VERSION 1.0.4
  [stefan kost]
    - open files are now visualized underlined like the filesystem-browser does.
    - updated docs

VERSION 1.0.4
  [dale anson]
    - improved persistence of project files
    - added ability to designate a file as a "build file" for the project. This
	  will notify registered listeners that may be interested when the project
	  changes.
    - added persistence of the state of the folder tree so that it will automa-
	  tically expand to where it was when the project was last used.
 
VERSION 1.0.4

  [marcelo vanzin]
    - changed configuration file layout. Each project has its own configuration
      file now (under projects/). Project configuration is "lazy loaded" (loaded
      only when needed).
      
    - added configuration panel to jEdit configuration dialog and added config
      class holding all configuration data for the plugin. Also, added some
      configuration options.
      
    - added properties dialog for projects, used to create new project and to
      modify existing ones.
      
    - added context menus to the trees, and implemented multiple selections in
      the tree (only in single project view). Remove buttons and context menu
      entries now can handle multiple selections.
      
    - opened files are remembered on a per-project basis. Also, the last opened
      project is remembered between jEdit sessions.
      
    - Lots of small changes/fixes.

  [stefan kost]
   - fixed bug when importing files from dirs not below project root
   
   
VERSION 1.0.3

  [stefan kost]